@@ -4,6 +4,8 @@ v0.10.0 (WIP):
         From this point ed::EndCreate() and ed::EndDelete() can only be called when
         ed::BeginCreate() and ed::BeginDelete() calls were successful.
 
+    BREAKING: Editor: Minimum supported version is now Dear ImGui 1.89 (August 2022)
+
     RESTRUCTURE:
         Removed local copy of all dependencies in favor of auto checkout. This should also reduce
         user confusion and attempt to use ancient version of ImGui embedded in the repository.
